--- a/barimbti/index.html
+++ b/barimbti/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>바리 유형 테스트</title>
+    <meta name="description" content="mbti를 기반으로 내가 어떤 바리인지 알아보아요">
+    <meta property="og:type" content="website"> 
+    <meta property="og:title" content="바리 유형 테스트">
+    <meta property="og:description" content="mbti를 기반으로 내가 어떤 바리인지 알아보아요!">
+    <meta property="og:image" content="https://whatbariami.netlify.app/바리 시작.png">
+    <meta property="og:url" content="https://whatbariami.netlify.app/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
