--- a/barimbti/index.html
+++ b/barimbti/index.html
@@ -49,9 +49,14 @@
         <a href="https://www.instagram.com/you1dog_official/">바리별 유형이 궁금하다면? 여기를 클릭하세요!</a>
     </div>
 
+    <a class="mt-2 eventbanner" href="https://www.instagram.com/p/Cil1Ty8JVo2/?utm_source=ig_web_copy_link">
+        <img class="eventbanner-img" id="eventbanner" src="images/이벤트.png" alt="eventbanner">
+    </a> 
+
     <a class="mt-2 banner" href="https://link.tumblbug.com/GMlA4LahZsb?utm_source=bari_test&utm_medium=banner&utm_campaign=you1dog">
         <img class="banner-img" id="banner" src="images/율견배너.png" alt="banner">
     </a> 
+    
     <article class="kakao-ad mt-2">
         <ins class="kakao_ad_area" style="display:none;" 
         data-ad-unit    = "DAN-wBkJjHjmUzpmVKYt" 
